# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\Api\FlightController;
 use App\Http\Controllers\Api\PassengerController;
+use App\Http\Controllers\Api\ReservationController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -11,3 +12,9 @@ Route::get('health', function (Request $request) {
 
 Route::apiResource('flights', FlightController::class)->only(['index', 'store', 'show']);
 Route::apiResource('passengers', PassengerController::class)->only(['store', 'show']);
+Route::post('flights/{flight}/reservations', [ReservationController::class, 'store'])
+    ->name('flights.reservations.store');
+Route::get('flights/{flight}/manifest', [ReservationController::class, 'manifest'])
+    ->name('flights.manifest.show');
+Route::get('reservations/{reservation}', [ReservationController::class, 'show'])
+    ->name('reservations.show');
